--- a/style.sass
+++ b/style.sass
@@ -25,7 +25,7 @@
 @import "scss/_icons.scss"
 @import "scss/_screen-reader.scss"
 
-$parent_menu_items: 6
+$parent_menu_items: 5
 $subnave_menu: 2
 $darkRed: #b53d3d
 $darkGray: #6d6d6d
@@ -37,6 +37,7 @@ $yellow: #ffcc00
 $black: #000000
 $white: #ffffff
 
+    
 *
     padding: 0
     margin: 0
@@ -46,6 +47,23 @@ html
     font-size: 100%
     height: 100%
     
+
+    
+/*------------------------------------*\
+ *	TYPOGRAPHY
+ *\*------------------------------------
+
+@font-face
+    font-family: 'Font-Name'
+    src: url('fonts/font-name.eot')
+    src: url('fonts/font-name.eot?#iefix') format("embedded-opentype"), url('fonts/font-name.woff') format("woff"), url('fonts/font-name.ttf') format("truetype"), url('fonts/font-name.svg#font-name') format("svg")
+    font-weight: normal
+    font-style: normal
+
+p
+    margin-bottom: 20px
+    line-height: 1.4
+
 
 /* clear*/
 .clear
@@ -57,7 +75,7 @@ html
         display: table
         clear: both
         zoom: 1
-
+ 
 img
     max-width: 100%
     vertical-align: bottom
@@ -87,13 +105,15 @@ header
     height: 150px
     @include size (mobile)
         display: none
+    
 
 #myHeader
     width: 100%
     overflow: hidden
     height: 115px
-    padding: 15px 50px   
+    padding: 15px 20px   
     z-index: 1 
+    
 .header
     padding: 10px 16px
     overflow: hidden
@@ -110,16 +130,51 @@ header
 
 .logo
     float: left 
-    width: 260px
+    width: 200px
     overflow: hidden
     max-height: 70px
     img
-        width: 60%
+        width: 70%
 
-    
-/* wrapper*/
-
+/* nav*/
+.nav
+    font-family: 'Lora', serif
+    float: right
+    width: 45%
+    font-size: 1em
+    font-weight: bold
+    margin: 9px auto
+    @include size (tablet)
+        width: 63%
+    ul#main
+        li
+            list-style-type: none
+            float: left
+            width: percentage((1/$parent_menu_items))
+            text-align: left
+            height: 30px
+            line-height: 30px
+            &:nth-child(3)
+                padding-right: 26px  
+            &:hover
+                .sub-menu
+                    display: block
+                    text-align: left
+                    li
+                        text-align: left
+                        float: none
+                        width: percentage((1/$subnave_menu))
+                        padding: 2px 0   
+            &:nth-child(4)
+                width:  22%
+            &:nth-child(5)
+                width: 18%   
+            ul.sub-menu
+                display: none
+            a
+                color: $darkRed
   
+/* wrapper*/
 body
     height: 100%
     font-family: 'PT Sans Narrow', sans-serif
@@ -131,9 +186,7 @@ body
     font-family: 'Noto Serif', serif
     #wrapper
         margin-top: 50px
-
-    // Frontpage
-            
+    // Frontpage       
     #banner
         background-image: url('https://miminaz.com/mimi/web170/portfolio/wp-content/uploads/bg-2.jpg')
         background-repeat: no-repeat
@@ -150,14 +203,21 @@ body
         clear: both
         overflow: hidden
         @include size(mobile)
-            width: 100%
-            margin: 0
+            width: 95%
+            margin: 0 auto
             padding: 0
+        @include size(tablet)
+            width: 90%
         header
             margin: 20px auto
         section 
             float: left
             width: 70%
+            @include size(mobile)
+                float: none
+                width: auto
+            @include size(tablet)
+                width: 50%
         .how2
             font-size: 1em
     
@@ -166,19 +226,42 @@ body
         float: right
         width: 30%
         margin: 30px auto
+        @include size(mobile)
+            float: none
+            width: auto
+        @include size(tablet)
+            width: 43%
         img
-            width: 30%
+            width: 55%
             float: right
-            margin-left: 30px
+            margin-left: 10px
+            @include size(mobile)
+                float: none
+                width: auto
+                margin: 0
+            @include size(tablet)
+                float: none
+                width: auto
+
             
 
 section 
     width: 78%
-    margin: 20px auto 
+    margin: 20px auto  
+    @include size(mobile)
+        float: none
+        width: auto
+    @include size(tablet)
+        width: 95%
     article
         width: 80%
         padding-left: 20px 
         float: left
+        @include size(mobile)
+            float: none
+            width: auto
+        @include size(tablet)
+            width: 90%
     aside
         margin-top: 100px
 
@@ -186,7 +269,6 @@ section
 .textonimg 
     clear: both
     overflow: hidden
-    // position: relative
     height: 300px
     background-image: url('https://miminaz.com/mimi/web170/portfolio/wp-content/uploads/bg-1.jpg')
     h3
@@ -300,97 +382,15 @@ li
     width: 60%
     float: left
     margin: 10px 20px
-
-
-
-
-/* nav*/
-.nav
-    font-family: 'Lora', serif
-    float: right
-    width: 45%
-    font-size: 1em
-    font-weight: bold
-    margin: 9px auto
-    @include size (tablet)
-        width: 63%
-    ul#main
-        li
-            list-style-type: none
-            float: left
-            width: percentage((1/$parent_menu_items))
-            text-align: right
-            height: 30px
-            line-height: 30px
-            &:nth-child(3)
-                padding-right: 26px
-            &:hover
-                .sub-menu
-                    display: block
-                    text-align: left
-                    margin-left: 25px
-                    li
-                        text-align: left
-                        float: none
-                        // width: auto
-                        width: percentage((1/$subnave_menu))
-                        padding: 2px 0        
-            ul.sub-menu
-                display: none
-            a
-                color: $darkRed
+    @include size(mobile)
+        float: none
+        width: auto
+        margin: 0
+    @include size(tablet)
+        width: 49%
 
 /* sidebar*/
 
-/* footer*/
-
-footer
-    padding-top: 25px
-    margin: 50px auto
-    width: 85%
-    @include size (mobile)
-        width: 100%
-        display: block
-        padding: 1em
-#footer 
-    margin: 0 auto
-    width: 100%
-    clear: both
-    h2 
-        margin: 0 auto
-    .services
-        li
-            width: 27%
-            float: left
-            list-style: none
-            padding: 1.5%
-            text-align: center
-            // &:nth-child(1),
-            // &:nth-child(2),
-            // &:nth-child(3)
-            //     margin-right: 2.12%
-            // &.list3
-            //     float: right
-            @include size(mobile)
-                float: none
-                width: 100%
-.footersocial
-    float: right
-    @include size(mobile)
-        float: none
-        margin: 0 auto
-        padding-bottom: 5em
-
-#copyright
-    line-height: 50px
-    clear: both
-    margin-top: 20px
-    text-align: center
-    a
-        color: $yellow
-        &:hover
-            font-weight: bold
-            text-decoration: underline
 /*------------------------------------*\
  *	PAGES
  *\*------------------------------------
@@ -434,33 +434,25 @@ footer
                 color: $lightblue
             .highlight
                 display: none
-        
-                
-                
-
-
 .subSteps
     margin: 20px auto
+    text-align: center
     li
         float: left
         width: 20%
         margin-right: 25px
+        @include size(mobile)
+            float: none
+            display: block
+            width: 55%
+            margin: 0 auto
+        @include size(tablet)
+            width: 40%
         img
             width: auto
 /*------------------------------------*\
  *    IMAGES
  *\*------------------------------------
-
-/*------------------------------------*\
- *	TYPOGRAPHY
- *\*------------------------------------
-
-@font-face
-    font-family: 'Font-Name'
-    src: url('fonts/font-name.eot')
-    src: url('fonts/font-name.eot?#iefix') format("embedded-opentype"), url('fonts/font-name.woff') format("woff"), url('fonts/font-name.ttf') format("truetype"), url('fonts/font-name.svg#font-name') format("svg")
-    font-weight: normal
-    font-style: normal
 
 
 /*------------------------------------*\
@@ -524,6 +516,61 @@ a img
     line-height: 17px
     margin: 0
     padding: 0 4px 5px
+
+/* footer*/
+
+footer
+    padding-top: 25px
+    margin: 50px auto
+    width: 85%
+    max-width: 1180px
+    @include size (mobile)
+        width: auto
+        display: block
+        padding: 1em
+#footer 
+    margin: 0 auto
+    width: 100%
+    clear: both
+    h2 
+        margin: 0 auto
+    .services
+        max-width: 960px
+        padding-top: 15px
+        li
+            width: 25%
+            float: left
+            list-style: none
+            padding: 1.5%
+            text-align: center
+            @include size(mobile)
+                float: none
+                width: auto
+            @include size(tablet)
+                width: 33%
+
+.footersocial
+    float: right
+    @include size(mobile)
+        float: none
+        margin: 0 auto
+        padding-bottom: 5em
+    @include size(tablet)
+        float: none
+        clear: both
+        max-width: 100px
+        margin: 40px auto
+
+#copyright
+    line-height: 50px
+    clear: both
+    margin-top: 20px
+    text-align: center
+    a
+        color: $yellow
+        &:hover
+            font-weight: bold
+            text-decoration: underline
 
 
 /*------------------------------------*\
